basic functionality with looking up words on hover with shift pressed, and displaying the reponse from rust-korean API in a popup next to the word. running locally. probably lots of bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,9 @@
   ],
   "compilerOptions": {
     "paths": {
-      "~*": [
-        "./*"
-      ]
+      "~*": ["./src/*"]
     },
-    "baseUrl": "."
-  }
+    "baseUrl": ".",
+  },
+  "lib": ["dom"]
 }
