--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "plasmo test"
   },
   "dependencies": {
+    "@plasmohq/messaging": "^0.6.1",
     "plasmo": "0.84.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
