--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.2"
+chrono = { version = "0.4.31", features = ["serde"] }
 lazy_static = "1.4.0"
 regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
 took = "0.1.2"
 tracing = "0.1.40"
