--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  migrate:
+  service:
     runs-on: ubuntu-latest
 
     services:
@@ -28,6 +28,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+  migrate:
+    runs-on: ubuntu-latest
+
+    needs: service
+
+    steps:
       - name: Install sqlx-cli
         run: cargo install sqlx-cli --no-default-features --features postgres
 
@@ -40,9 +46,6 @@ jobs:
     needs: migrate
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
       - name: Build
         run: cargo build --verbose
 
