--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "plasmo test"
   },
   "dependencies": {
-"@plasmohq/messaging": "^0.6.1",
+    "@plasmohq/messaging": "^0.6.1",
     "plasmo": "0.84.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -20,12 +20,15 @@
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
-    "prettier": "3.0.3",
+    "prettier": "^3.1.1",
     "typescript": "5.2.2"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*"
     ]
+  },
+  "prettier": {
+    "lineWidth": 100
   }
 }
