--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:latest
     container_name: postgres-korean
     environment:
-      POSTGRES_PASSWORD: mypassword
+      POSTGRES_PASSWORD: secret
     ports:
       - "5432:5432"
     volumes:
