--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = "0.7.2"
 chrono = { version = "0.4.31", features = ["serde"] }
+itertools = "0.12.0"
 lazy_static = "1.4.0"
 regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
