--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Change directory
-        uses: cd backend
+        run: cd backend
 
       - name: Install sqlx-cli
         run: cargo install sqlx-cli --no-default-features --features postgres
