--- a/browser-extension/package.json
+++ b/browser-extension/package.json
@@ -20,7 +20,10 @@
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
     "prettier": "^3.1.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.2.2"
   },
   "manifest": {
