--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,7 @@ FROM rust:latest
 ARG DATABASE_URL
 ENV DATABASE_URL=$DATABASE_URL
 EXPOSE 3000
+EXPOSE 80
 
 # Set the working directory inside the container
 WORKDIR /usr/src/app
