new dockerfile with caching, sqlx offline mode

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,24 @@
-# Use the official Rust image as the base image
-FROM rust:latest
-ARG DATABASE_URL
-ENV DATABASE_URL=$DATABASE_URL
-EXPOSE 4000
+FROM rust:latest as chef
+RUN cargo install cargo-chef
+WORKDIR app
 
-# Set the working directory inside the container
-WORKDIR /usr/src/app
-
-# Install the sqlx-cli
-RUN cargo install sqlx-cli
-
-# Copy the project files into the container
+FROM chef AS planner
 COPY . .
+RUN cargo chef prepare --recipe-path recipe.json
 
-# Run the sqlx migration
-RUN sqlx migrate run
+FROM chef AS builder 
+COPY --from=planner /app/recipe.json recipe.json
+# Build dependencies - this is the caching Docker layer!
+RUN cargo chef cook --release --recipe-path recipe.json
+# Build application
+COPY . .
+COPY ./.sqlx ./
+ENV SQLX_OFFLINE true
+RUN cargo build --release --bin rust-korean
 
-RUN cargo build
-
-# Build and run the Rust app
-CMD ["cargo", "run"]
-
+# We do not need the Rust toolchain to run the binary!
+FROM debian:bookworm-slim AS runtime
+WORKDIR app
+COPY --from=builder /app/target/release/rust-korean /usr/local/bin
+RUN apt-get update && apt-get install -y libssl-dev
+ENTRYPOINT ["/usr/local/bin/rust-korean"]
