--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2.7.3
         
       - name: Build
         run: cargo build --verbose
