--- a/browser-extension/tsconfig.json
+++ b/browser-extension/tsconfig.json
@@ -1,19 +1,13 @@
 {
   "extends": "plasmo/templates/tsconfig.base",
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    ".plasmo/index.d.ts",
-    "./**/*.ts",
-    "./**/*.tsx"
-  ],
+  "exclude": ["node_modules"],
+  "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx"],
   "compilerOptions": {
     "paths": {
-      "~*": ["./src/*"]
+      "~*": ["./src/*"],
     },
     "baseUrl": ".",
     "strict": true,
   },
-  "lib": ["dom"]
+  "lib": ["dom"],
 }
