--- a/browser-extension/package.json
+++ b/browser-extension/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@plasmohq/messaging": "^0.6.1",
+    "@plasmohq/storage": "^1.9.3",
     "plasmo": "0.84.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
