--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,5 +16,6 @@ serde_json = "1.0.108"
 sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
 took = "0.1.2"
+tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
