--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,15 +7,25 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.2"
+axum-extra = { version = "0.9.3", features = ["typed-header"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 itertools = "0.12.0"
 lazy_static = "1.4.0"
+pasetors = "0.6.8"
 regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
+sqlx = { version = "0.7.3", features = [
+  "runtime-tokio",
+  "postgres",
+  "macros",
+  "chrono",
+  "uuid",
+] }
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
 took = "0.1.2"
+tower-cookies = { version = "0.10.0", features = ["private", "signed"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+uuid = { version = "1.8.0", features = ["v4", "serde"] }
